--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.11",
     "@types/mysql": "^2.15.26",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.3"
@@ -19,6 +20,8 @@
     "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "firebase": "^10.9.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0"
   }
